# devcontainer-boilerplate-jupyter-poetry-langchain

./: README.md  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
