[tool.poetry]
name = "devcontainer-boilerplate-python-poetry-langchain"
version = "0.1.0"
description = ""
authors = ["Pablo Ulloa <pablo.ulloac@usach.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.0b0"
langchain = "^0.0.336"
langchain-cli = "^0.0.17"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
