[tool.poetry]
name = "devcontainer-boilerplate-python-poetry-langchain"
version = "0.1.0"
description = ""
authors = ["Pablo Ulloa <pablo.ulloac@usach.cl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.2"
langchain = "^0.1.11"
langchain-cli = "^0.0.17"
jupyter = "^1.0.0"
openai = "^1.3.2"
feedparser = "^6.0.10"
newspaper3k = "^0.2.8"
listparser = "^0.19"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
